--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,15 @@
     </div>
   </div>
   <!-- end of second nav-bar -->
-  <div>
-    <img src=""
+  <div class="w-full relative">
+    <div>
+    <img src="porto-images/programa-de-formacao-multidisplinar-uporto-s.format-jpeg.jpg" class="w-full h-[80vh] object-cover">
   </div>
+  <div class="absolute bottom-44 left-10 right-72 mx-64 bg-black">
+<h1 class="text-white mx-8 my-5">Let us grow together</h1>
+<p class="mx-10 text-white my-5">“It means that you and your partner are not only compatible, but also willing to learn, change, and evolve together,” he says. Growth in a relationship, he adds, can take many forms, such as overcoming challenges, pursuing goals</p>
+<button class="bg-yellow-800 px-6 py-2 text-black mx-8">See more</button>
+  </div>
+</div>
 </body>
 </html>
