--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="output.css" rel="stylesheet">
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css">
 </head>
 <body>
@@ -54,11 +54,39 @@
     <div>
     <img src="porto-images/programa-de-formacao-multidisplinar-uporto-s.format-jpeg.jpg" class="w-full h-[80vh] object-cover">
   </div>
-  <div class="absolute bottom-44 left-10 right-72 mx-64 bg-black">
+  <div class="absolute bottom-44 mx-28 bg-black opacity-70">
 <h1 class="text-white mx-8 my-5">Let us grow together</h1>
 <p class="mx-10 text-white my-5">“It means that you and your partner are not only compatible, but also willing to learn, change, and evolve together,” he says. Growth in a relationship, he adds, can take many forms, such as overcoming challenges, pursuing goals</p>
 <button class="bg-yellow-800 px-6 py-2 text-black mx-8">See more</button>
   </div>
 </div>
+<div>
+  <h1 class="text-3xl pl-40 text-yellow-600 mt-20">Study</h1>
+</div>
+<div class="flex justify-between mt-10 px-40 gap-10"> 
+<div>
+  <h1 class="text-3xl">Your future is here</h1>
+</div>
+<div>
+  <p class="mx-9 text-2xl">Gathering the most complete offer of training programmes in Portugal, the 14 faculties of the U.Porto offer unique conditions to those who want to build an academic path of excellence and properly valued by the labour market.</p>
+</div>
+</div>
+<!-- End of the third section -->
+<h1 class="pl-40 text-3xl mt-20 mb-5">Which course are you looking for?</h1>
+<div class="flex gap-8">
+<div class="pl-40 flex flex-col gap-4">
+  <input type="text" placeholder="All" class="bg-white border border-black"></input>
+  <input type="text" placeholder="Please enter course keywords" class="bg-white border border-black w-full"></input>
+  <button class="bg-yellow-800 px-64 py-4">Search</button>
+</div>
+<div class="flex flex-col">
+  <h1 class="text-3xl mb-5">Courses from A to Z:</h1>
+  <a href="#" class="text-2xl">Bachelor's and integrated master's Degree</a>
+  <a href="#" class="text-2xl">Master's degree</a>
+  <a href="#" class="text-2xl">Doctorates</a>
+</div>
+</div>
+  <!-- End of fourth section -->
+
 </body>
 </html>
