--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
     <div>
     <img src="porto-images/programa-de-formacao-multidisplinar-uporto-s.format-jpeg.jpg" class="w-full h-[80vh] object-cover">
   </div>
-  <div class="absolute bottom-44 mx-28 bg-black opacity-70">
-<h1 class="text-white mx-8 my-5">Let us grow together</h1>
+  <div class="absolute bottom-44  mx-32 px-4 py-8 bg-black opacity-70">
+<h1 class="text-white  mx-5 my-5">Let us grow together</h1>
 <p class="mx-10 text-white my-5">“It means that you and your partner are not only compatible, but also willing to learn, change, and evolve together,” he says. Growth in a relationship, he adds, can take many forms, such as overcoming challenges, pursuing goals</p>
 <button class="bg-yellow-800 px-6 py-2 text-black mx-8">See more</button>
   </div>
@@ -87,6 +87,58 @@
 </div>
 </div>
   <!-- End of fourth section -->
+<div class="bg-gray-100 mt-20">
+<div class="flex justify-between px-40 mt-20">
+  <div>
+  <h1 class="text-yellow-800 text-3xl">News</h1>
+</div>
+<div class="flex gap-4">
+  <div>
+  <h1 class="text-yellow-800 text-2xl">All News</h1>
+</div>
+<div class="bg-yellow-800 rounded-full py-3 px-3">
+  <i class="fa-solid fa-greater-than" style="color: #ffffff;"></i>
+</div>
+</div>
+</div>
+<div class="flex mt-10 gap-5 px-40">
+  <div class="flex-1 bg-white">
+    <div class="mx-5">
+      <h1 class="text-yellow-800 my-5">Desporota</h1>
+      <p class="mb-20">U.Porto vai organizar Europeu Universitário de Futebol em 2027</p>
+      <p class="mb-5">14 May 2023</p>
+    </div>
+    <div>
+      <img src="porto-images/aerea-frente-edificios.jpg">
+    </div>
 
+  </div>
+  <div class="flex-1 bg-white">
+    <div class="mx-5">
+      <h1 class="text-yellow-800 my-5">Campus e Communidade | Ciencia e Innovacao | Multimedia | Video</h1>
+      <p class="mb-16">Mais de 1000 estudantes foram ao IJUP "abrir as portas" da Ciência</p>
+      <p class="mb-5">14 May 2023</p>
+    </div>
+    <div>
+      <img src="porto-images/ijup-2024_12.format-jpeg.jpg">
+    </div>
+  </div>
+  <div class="flex-1 bg-white">
+    <div class="mx-5">
+      <h1 class="text-yellow-800 my-5">Cultura</h1>
+      <p class="mb-20">MHNC-UP abre "fora de horas" para celebrar os Museus e a Ciência
+      </p>
+      <p class="mb-5">14 May 2023</p>
+    </div>
+    <div>
+      <img src="porto-images/ijup-2024_31.jpg">
+    </div>
+  </div>
+</div>
+</div>
+<div class="flex mt-10">
+  <div class="bg-yellow-800"></div>
+  <div></div>
+</div>
 </body>
 </html>
