--- a/src/index.html
+++ b/src/index.html
@@ -135,10 +135,14 @@
     </div>
   </div>
 </div>
+<div class="flex mt-10 pl-40 gap-4">
+  <div class=" bg-gray-500 px-3 py-5"><i class="fa-solid fa-less-than" style="color: #ffffff;"></i></div>
+  <div class=" bg-yellow-800 px-3 py-5"><i class="fa-solid fa-greater-than" style="color: #ffffff;"></i></div>
 </div>
-<div class="flex mt-10">
-  <div class="bg-yellow-800"></div>
-  <div></div>
+</div>
+<!-- End of fifth section -->
+<div>
+  
 </div>
 </body>
 </html>
