--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 </div>
 <div class="flex flex-col">
   <h1 class="text-3xl mb-5">Courses from A to Z:</h1>
-  <a href="#" class="text-2xl">Bachelor's and integrated master's Degree</a>
-  <a href="#" class="text-2xl">Master's degree</a>
-  <a href="#" class="text-2xl">Doctorates</a>
+  <a href="#" class="text-2xl underline font-extralight">Bachelor's and integrated master's Degree</a>
+  <a href="#" class="text-2xl underline font-extralight">Master's degree</a>
+  <a href="#" class="text-2xl underline font-extralight">Doctorates</a>
 </div>
 </div>
   <!-- End of fourth section -->
@@ -141,7 +141,64 @@
 </div>
 </div>
 <!-- End of fifth section -->
+<div style="background-image: url(./images/banner-bg.jpg);" class="flex">
 <div>
+  <!-- <h1 class="text-3xl text-yellow-800 pl-40">We are a university of excellence</h1> -->
+</div>
+<div>
+  <p></p>
+  <p></p>
+  <p></p>
+</div>
+
+</div>
+<!-- End of sixth section -->
+<div><h1 class="text-3xl text-yellow-800 pl-40 mt-20">Research</h1></div>
+<div class="flex px-40 mt-10">
+  <div class="flex-1">
+    <h1 class="my-5">Research University</h1>
+    <p class="my-5">With 48 research units and a highly qualified scientific community, the University of Porto is one of the largest producers of science in Portugal, contributing to almost 25% of all national scientific output.</p>
+    <p class="my-5">The excellence of our scientific ecosystem is particularly evident in the leading position the University occupies in the main international rankings of Higher Education.</p>
+  </div>
+  <div class="flex-1 ">
+ <img src="porto-images/investigar-home_destaque.format-jpeg.jpg">
+  </div>
+</div>
+<div class="bg-yellow-800">
+  <div class=" mt-10 flex flex-col justify-center gap-8">
+    <div class="flex justify-center">
+      <div>
+        <i class="fa-thin fa-bullhorn fa-xl"></i>
+  </div>
+    <div class="flex gap-2">
+      <div>
+    <p>Learn more</p>
+  </div>
+    <div class="bg-white rounded-full py-1 px-1">
+      <i class="fa-solid fa-greater-than" style="color: #F9A825;"></i>
+    </div>
+  </div>
+</div>
+<div class="flex flex-col justify-center">
+  <div>
+  <h1>U.PORTO IN FIGURES</h1>
+</div>
+<div>
+  <h1>2022/2023</h1>
+</div>
+</div>
+<div>
+  <hr>
+</div>
+<div class="flex justify-center gap-10">
+  <p>+300<br>
+    Courses</p>
+  <p>+35.000<br>
+    Students enrolled</p>
+  <p>48<br>
+    Research Units</p>
+</div>
+  </div>
   
 </div>
 </body>
