--- a/index.html
+++ b/index.html
@@ -199,7 +199,29 @@
     Research Units</p>
 </div>
   </div>
-  
+ 
+</div>
+<div><h1 class="text-3xl text-yellow-800 mt-20 pl-40 mb-10">Frequently asked questions</h1></div>
+<div class="flex gap-5 px-40 mt-10 mb-10 text-2xl">
+  <h1>International students</h1>
+  <h1>Prospective students</h1>
+  <h1>Professionals</h1>
+  <h1>Alumni</h1>
+  <h1>U.porto students</h1>
+</div>
+<div class="flex mt-10 px-40">
+  <div>
+    <h1 class="text-3xl text-yellow-800">International Students</h1>
+    <p class="mt-10 mx-4 text-2xl">Welcome! In this area you will find the answers you need to start and make the most of your experience at the University. We hope to help you... and welcome you soon!</p>
+    <div class="flex gap-4"><p>See more</p><i class="fa-solid fa-greater-than" style="color: #F9A825;"></i></div>
+    <div class="flex mt-10 gap-4">
+      <div class=" bg-gray-500 px-3 py-5"><i class="fa-solid fa-less-than" style="color: #ffffff;"></i></div>
+      <div class=" bg-yellow-800 px-3 py-5"><i class="fa-solid fa-greater-than" style="color: #ffffff;"></i></div>
+    </div>
+  </div>
+  <div>
+    <img src="porto-images/gate-estudantes-internacionais.format-jpeg.jpg">
+  </div>
 </div>
 </body>
 </html>
