--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div>
         <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
         <i class="fa-brands fa-youtube" style="color: #8d8e91;"></i>
-        <i class="fa-brands fa-x-twitter"></i>
-        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-x-twitter" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
       </div>
       <div class="flex">
 
@@ -213,7 +213,14 @@
   <div>
     <h1 class="text-3xl text-yellow-800">International Students</h1>
     <p class="mt-10 mx-4 text-2xl">Welcome! In this area you will find the answers you need to start and make the most of your experience at the University. We hope to help you... and welcome you soon!</p>
-    <div class="flex gap-4"><p>See more</p><i class="fa-solid fa-greater-than" style="color: #F9A825;"></i></div>
+    <div class="flex gap-4">
+      <div>
+      <p>See more</p>
+    </div>
+      <div class="bg-yellow-800 rounded-full py-3 px-3">
+        <i class="fa-solid fa-greater-than" style="color: #ffffff;"></i>
+      </div>
+    </div>
     <div class="flex mt-10 gap-4">
       <div class=" bg-gray-500 px-3 py-5"><i class="fa-solid fa-less-than" style="color: #ffffff;"></i></div>
       <div class=" bg-yellow-800 px-3 py-5"><i class="fa-solid fa-greater-than" style="color: #ffffff;"></i></div>
@@ -222,6 +229,54 @@
   <div>
     <img src="porto-images/gate-estudantes-internacionais.format-jpeg.jpg">
   </div>
+</div>
+<div class="bg-black opacity-70 text-white mt-20">
+<div class="flex justify-center gap-10">
+<h1>Media</h1>
+<div>
+<h1>U.Porto News</h1>
+<h1>Brochures and Presentations</h1>
+</div>
+<h1>U.Porto Agenda</h1>
+<h1>Media Contacts</h1>
+<h1>Image Manual</h1>
+
+</div>
+<!-- first line -->
+<div class="flex justify-center gap-10">
+  <h1>Media</h1>
+<div>
+<h1>U.Porto News</h1>
+<h1>Brochures and Presentations</h1>
+<h1></h1>
+<h1>Peer Mentoring</h1>
+
+</div>
+<div>
+<h1>U.Porto Agenda</h1>
+<h1>Peer Mentoring</h1>
+<h1>AcademiaUP</h1>
+</div>
+<div>
+<h1>Media Contacts</h1>
+<h1>Complaints Portal</h1>
+<h1>SIGARRA U.Porto</h1>
+</div>
+<div>
+<h1>Image Manual</h1>
+<h1>Educational Innovation</h1>
+<h1>Former Students Portal</h1>
+</div>
+</div>
+<!-- Second line  -->
+<div class="flex justify-center gap-10 bg-white"></div>
+<!-- Third line -->
+<div>
+  <hr>
+</div>
+<!-- <Fourth line -->
+<div class="flex justify-center gap-10"></div>
+<!-- Last line -->
 </div>
 </body>
 </html>
