--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
   <!-- first nav-bar -->
-  <div class="flex bg-gray-950 justify-between">
-    <div class="flex">
-        <p class="text-white">About the university</p> <i class="fa-solid fa-caret-down" style="color: #5d6065;"></i> 
+  <div class="flex bg-gray-950 justify-between px-10">
+    <div class="flex gap-5">
+      <div class="flex gap-4 justify-center align-center">
+        <p class="text-white">About the university</p> <i class="fa-solid fa-caret-down" style="color: #5d6065;"></i>
+      </div>
+      <div class="flex gap-4 justify-center"> 
         <p  class="text-white">Faculties</p> <i class="fa-solid fa-caret-down" style="color: #5d6065;"></i>
+      </div>
     </div>
     <div class="flex">
       <div>
         <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
         <i class="fa-brands fa-youtube" style="color: #8d8e91;"></i>
-        <i class="fa-brands fa-x-twitter" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-x-twitter" style="color: #8d8e91;" ></i>
         <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
       </div>
       <div class="flex">
@@ -28,9 +32,10 @@
   </div>
   <!-- end of first nav-bar -->
   <!-- Second nav-bar begin -->
-  <div class="flex flex-row gap-8 bg-gray-400">
-    <div class="flex-1  pl-20 ">
-      <img src="porto-images/logo.svg" class="h-32 w-64 mt-10"></div>
+  <div class="flex flex-row bg-gray-400">
+    <div class=" flex flex-row my-10 px-40 gap-20">
+    <div class="flex-1">
+      <img src="porto-images/logo.svg" class="h-32 w-64"></div>
     
     <div class="flex-1 flex gap-4 mt-10">
       <h1 class="font-bold uppercase">Study</h1>
@@ -48,6 +53,7 @@
       <hr class="bg-black mx-40">
     </div>
     </div>
+  </div>
   </div>
   <!-- end of second nav-bar -->
   <div class="w-full relative">
@@ -164,33 +170,33 @@
  <img src="porto-images/investigar-home_destaque.format-jpeg.jpg">
   </div>
 </div>
-<div class="bg-yellow-800">
-  <div class=" mt-10 flex flex-col justify-center gap-8">
-    <div class="flex justify-center">
-      <div>
-        <i class="fa-thin fa-bullhorn fa-xl"></i>
+<div class="bg-yellow-800 opacity-75">
+  <div class=" mt-10 flex flex-col justify-center items-center gap-8 text-white text-3xl px-40">
+    <div class="flex justify-center items-center pt-20">
+      <div class="flex-grow">
+        <i class="fa-thin fa-bullhorn fa-rotate-by fa-2xl" style="--fa-rotate-angle: 300deg;"></i>
   </div>
-    <div class="flex gap-2">
+    <div class="flex gap-2 justify-end">
       <div>
-    <p>Learn more</p>
+    <p >Learn more</p>
   </div>
-    <div class="bg-white rounded-full py-1 px-1">
-      <i class="fa-solid fa-greater-than" style="color: #F9A825;"></i>
+    <div>
+      <i class="fa-solid fa-square-caret-right fa-2xs" style="color: #ffffff;"></i>
     </div>
   </div>
 </div>
-<div class="flex flex-col justify-center">
+<div class="flex flex-col items-center">
   <div>
-  <h1>U.PORTO IN FIGURES</h1>
+  <h1 class="mt-10">U.PORTO IN FIGURES</h1>
 </div>
 <div>
-  <h1>2022/2023</h1>
+  <h1 class="mt-10">2022/2023</h1>
 </div>
 </div>
-<div>
+<div class="bg-white w-full">
   <hr>
 </div>
-<div class="flex justify-center gap-10">
+<div class="flex justify-center gap-40 mb-5">
   <p>+300<br>
     Courses</p>
   <p>+35.000<br>
@@ -209,6 +215,7 @@
   <h1>Alumni</h1>
   <h1>U.porto students</h1>
 </div>
+<div class="bg-gray-200 mx-40 h-0.5"><hr></div>
 <div class="flex mt-10 px-40">
   <div>
     <h1 class="text-3xl text-yellow-800">International Students</h1>
@@ -231,8 +238,9 @@
   </div>
 </div>
 <div class="bg-black opacity-70 text-white mt-20">
-<div class="flex justify-center gap-10">
-<h1>Media</h1>
+  <div class="px-40">
+<div class="flex justify-center gap-40 mt-20 pt-20">
+<h1 class="text-yellow-800">Media</h1>
 <div>
 <h1>U.Porto News</h1>
 <h1>Brochures and Presentations</h1>
@@ -243,8 +251,8 @@
 
 </div>
 <!-- first line -->
-<div class="flex justify-center gap-10">
-  <h1>Media</h1>
+<div class="flex justify-center gap-40 mt-20">
+  <h1 class="text-yellow-800">U.porto</h1>
 <div>
 <h1>U.Porto News</h1>
 <h1>Brochures and Presentations</h1>
@@ -269,14 +277,38 @@
 </div>
 </div>
 <!-- Second line  -->
-<div class="flex justify-center gap-10 bg-white"></div>
+
 <!-- Third line -->
-<div>
+<div class="mt-20">
   <hr>
 </div>
 <!-- <Fourth line -->
-<div class="flex justify-center gap-10"></div>
+<div class="flex justify-between gap-40 mt-20">
+  <div class="flex gap-10">
+      <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+      <i class="fa-brands fa-youtube" style="color: #8d8e91;"></i>
+      <i class="fa-brands fa-x-twitter" style="color: #8d8e91;" ></i>
+      <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+    </div>
+    <div>
+      <h1>Contacts</h1>
+      <h1>Reitoria da Universidade do Porto</h1>
+      <h1 >Praça Gomes Teixeira
+        4099-002 Porto, Portugal</h1>
+      <h1>Tel.: (+351) 220 408 000
+        E-mail: up@up.pt</h1>
+      <h1></h1>
+</div>
+    </div>
+    <div class="flex  gap-10 text-white mt-20">
+      <h1>University of Porto 2024</h1>
+      <h1>Personal Data Protectio</h1>
+      <h1>Privacy Policy</h1>
+      <h1>Accessibility</h1>
+    </div>
+
 <!-- Last line -->
+</div>
 </div>
 </body>
 </html>
