--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   </div>
   <!-- end of first nav-bar -->
   <!-- Second nav-bar begin -->
-  <div class="flex flex-row bg-gray-400">
-    <div class=" flex flex-row my-10 px-40 gap-20">
+  <div class="flex flex-row bg-gray-200">
+    <div class=" flex flex-row px-40 gap-20 justify-between">
     <div class="flex-1">
-      <img src="porto-images/logo.svg" class="h-32 w-64"></div>
-    
-    <div class="flex-1 flex gap-4 mt-10">
+      <img src="porto-images/logo.svg" class="h-32 w-96"></div>
+    <div class="flex-1 flex flex-row justify-end gap-8">
+    <div class="flex-1 flex gap-4 mt-10 text-[20px]">
       <h1 class="font-bold uppercase">Study</h1>
       <h1 class="font-bold uppercase">Research</h1>
       <h1 class="font-bold uppercase">Innovate</h1>
@@ -45,14 +45,15 @@
       <h1 class="font-bold uppercase">Explore</h1>
     </div>
     <div class="flex-1 flex flex-col mt-10">
-      <div class="flex-1 flex gap-6 ">
+      <div class=" flex flex-row gap-6 justify-center">
       <p>Search</p>
-      <i class="fa-thin fa-magnifying-glass" style="color: #0f0f10;"></i>
+      <i class="fa-thin fa-magnifying-glass " style="color: #0f0f10;"></i>
     </div>
-    <div class="flex-1">
-      <hr class="bg-black mx-40">
+    <div class=" bg-black h-0.5">
+      <hr>
     </div>
     </div>
+  </div>
   </div>
   </div>
   <!-- end of second nav-bar -->
@@ -60,14 +61,14 @@
     <div>
     <img src="porto-images/programa-de-formacao-multidisplinar-uporto-s.format-jpeg.jpg" class="w-full h-[80vh] object-cover">
   </div>
-  <div class="absolute bottom-44  mx-32 px-4 py-8 bg-black opacity-70">
+  <div class="absolute bottom-40 left-0  mx-32 w-[500px]  bg-black opacity-70">
 <h1 class="text-white  mx-5 my-5">Let us grow together</h1>
-<p class="mx-10 text-white my-5">“It means that you and your partner are not only compatible, but also willing to learn, change, and evolve together,” he says. Growth in a relationship, he adds, can take many forms, such as overcoming challenges, pursuing goals</p>
+<p class="mx-5 text-white my-5">“It means that you and your partner are not only compatible, but also willing to learn, change, and evolve together,” he says. Growth in a relationship, he adds, can take many forms, such as overcoming challenges, pursuing goals</p>
 <button class="bg-yellow-800 px-6 py-2 text-black mx-8">See more</button>
   </div>
 </div>
 <div>
-  <h1 class="text-3xl pl-40 text-yellow-600 mt-20">Study</h1>
+  <h1 class="text-[60px] pl-40 text-yellow-600 mt-20">Study</h1>
 </div>
 <div class="flex justify-between mt-10 px-40 gap-10"> 
 <div>
@@ -80,12 +81,12 @@
 <!-- End of the third section -->
 <h1 class="pl-40 text-3xl mt-20 mb-5">Which course are you looking for?</h1>
 <div class="flex gap-8">
-<div class="pl-40 flex flex-col gap-4">
-  <input type="text" placeholder="All" class="bg-white border border-black"></input>
-  <input type="text" placeholder="Please enter course keywords" class="bg-white border border-black w-full"></input>
+<div class=" flex-1 pl-40 flex flex-col gap-4">
+  <input type="text" placeholder=" All" class="bg-white border border-black w-full h-16 text-[20px]"></input>
+  <input type="text" placeholder=" Please enter course keywords..." class="bg-white border border-black w-full h-16 text-[20px]"></input>
   <button class="bg-yellow-800 px-64 py-4">Search</button>
 </div>
-<div class="flex flex-col">
+<div class="flex-1 flex flex-col">
   <h1 class="text-3xl mb-5">Courses from A to Z:</h1>
   <a href="#" class="text-2xl underline font-extralight">Bachelor's and integrated master's Degree</a>
   <a href="#" class="text-2xl underline font-extralight">Master's degree</a>
@@ -96,7 +97,7 @@
 <div class="bg-gray-100 mt-20">
 <div class="flex justify-between px-40 mt-20">
   <div>
-  <h1 class="text-yellow-800 text-3xl">News</h1>
+  <h1 class="text-yellow-800 text-[60px]">News</h1>
 </div>
 <div class="flex gap-4">
   <div>
