--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- first nav-bar -->
-  <div class="flex bg-gray-950 justify-between px-10">
+  <div class="flex bg-gray-950 justify-between px-40">
     <div class="flex gap-5">
       <div class="flex gap-4 justify-center align-center">
         <p class="text-white">About the university</p> <i class="fa-solid fa-caret-down" style="color: #5d6065;"></i>
@@ -18,16 +18,21 @@
         <p  class="text-white">Faculties</p> <i class="fa-solid fa-caret-down" style="color: #5d6065;"></i>
       </div>
     </div>
-    <div class="flex">
+    <div class="flex gap-5">
+    <div class="flex gap-5">
       <div>
         <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
         <i class="fa-brands fa-youtube" style="color: #8d8e91;"></i>
         <i class="fa-brands fa-x-twitter" style="color: #8d8e91;" ></i>
         <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
       </div>
-      <div class="flex">
-
+      <div class="flex gap-2">
+        <p class="text-gray-300">PT</p>
+        <p class="text-white">EN</p>
       </div>
+    </div>
     </div>
   </div>
   <!-- end of first nav-bar -->
@@ -64,11 +69,11 @@
   <div class="absolute bottom-40 left-0  mx-32 w-[500px]  bg-black opacity-70">
 <h1 class="text-white  mx-5 my-5">Let us grow together</h1>
 <p class="mx-5 text-white my-5">“It means that you and your partner are not only compatible, but also willing to learn, change, and evolve together,” he says. Growth in a relationship, he adds, can take many forms, such as overcoming challenges, pursuing goals</p>
-<button class="bg-yellow-800 px-6 py-2 text-black mx-8">See more</button>
+<button class="bg-[#a18a4d] px-6 py-2 text-black mx-8">See more</button>
   </div>
 </div>
 <div>
-  <h1 class="text-[60px] pl-40 text-yellow-600 mt-20">Study</h1>
+  <h1 class="text-[60px] pl-40 text-[#a18a4d] mt-20">Study</h1>
 </div>
 <div class="flex justify-between mt-10 px-40 gap-10"> 
 <div>
@@ -84,7 +89,7 @@
 <div class=" flex-1 pl-40 flex flex-col gap-4">
   <input type="text" placeholder=" All" class="bg-white border border-black w-full h-16 text-[20px]"></input>
   <input type="text" placeholder=" Please enter course keywords..." class="bg-white border border-black w-full h-16 text-[20px]"></input>
-  <button class="bg-yellow-800 px-64 py-4">Search</button>
+  <button class="bg-[#a18a4d] px-64 py-4">Search</button>
 </div>
 <div class="flex-1 flex flex-col">
   <h1 class="text-3xl mb-5">Courses from A to Z:</h1>
@@ -97,22 +102,22 @@
 <div class="bg-gray-100 mt-20">
 <div class="flex justify-between px-40 mt-20">
   <div>
-  <h1 class="text-yellow-800 text-[60px]">News</h1>
+  <h1 class="text-[#a18a4d] text-[60px]">News</h1>
 </div>
 <div class="flex gap-4">
   <div>
-  <h1 class="text-yellow-800 text-2xl">All News</h1>
+  <h1 class="text-[#a18a4d] text-2xl">All News</h1>
 </div>
-<div class="bg-yellow-800 rounded-full py-3 px-3">
-  <i class="fa-solid fa-greater-than" style="color: #ffffff;"></i>
+<div >
+  <i class="fa-solid fa-circle-chevron-right" style="color: #a18a4d;"></i>
 </div>
 </div>
 </div>
 <div class="flex mt-10 gap-5 px-40">
   <div class="flex-1 bg-white">
     <div class="mx-5">
-      <h1 class="text-yellow-800 my-5">Desporota</h1>
-      <p class="mb-20">U.Porto vai organizar Europeu Universitário de Futebol em 2027</p>
+      <h1 class="text-[#a18a4d] my-5">Desporota</h1>
+      <p class="mb-20  text-[20px]">U.Porto vai organizar Europeu Universitário de Futebol em 2027</p>
       <p class="mb-5">14 May 2023</p>
     </div>
     <div>
@@ -122,8 +127,8 @@
   </div>
   <div class="flex-1 bg-white">
     <div class="mx-5">
-      <h1 class="text-yellow-800 my-5">Campus e Communidade | Ciencia e Innovacao | Multimedia | Video</h1>
-      <p class="mb-16">Mais de 1000 estudantes foram ao IJUP "abrir as portas" da Ciência</p>
+      <h1 class="text-[#a18a4d] my-5">Campus e Communidade | Ciencia e Innovacao | Multimedia | Video</h1>
+      <p class="mb-16  text-[20px]">Mais de 1000 estudantes foram ao IJUP "abrir as portas" da Ciência</p>
       <p class="mb-5">14 May 2023</p>
     </div>
     <div>
@@ -132,8 +137,8 @@
   </div>
   <div class="flex-1 bg-white">
     <div class="mx-5">
-      <h1 class="text-yellow-800 my-5">Cultura</h1>
-      <p class="mb-20">MHNC-UP abre "fora de horas" para celebrar os Museus e a Ciência
+      <h1 class="text-[#a18a4d] my-5">Cultura</h1>
+      <p class="mb-20 text-[20px]">MHNC-UP abre "fora de horas" para celebrar os Museus e a Ciência
       </p>
       <p class="mb-5">14 May 2023</p>
     </div>
@@ -143,61 +148,69 @@
   </div>
 </div>
 <div class="flex mt-10 pl-40 gap-4">
-  <div class=" bg-gray-500 px-3 py-5"><i class="fa-solid fa-less-than" style="color: #ffffff;"></i></div>
-  <div class=" bg-yellow-800 px-3 py-5"><i class="fa-solid fa-greater-than" style="color: #ffffff;"></i></div>
+  <i class="fa-solid fa-square-caret-left text-[50px]" style="color: #c9cdd4;"></i>
+  <i class="fa-solid fa-square-caret-right text-[50px]" style="color: #a18a4d;"></i>
 </div>
 </div>
 <!-- End of fifth section -->
-<div style="background-image: url(./images/banner-bg.jpg);" class="flex">
+<div style="background-image: url(./porto-images/minerva_01.png);" class="flex h-[60vh] mt-20 px-40">
 <div>
-  <!-- <h1 class="text-3xl text-yellow-800 pl-40">We are a university of excellence</h1> -->
+  <h1 class=" text-[60px] text-[#a18a4d] ">We are a university of excellence</h1>
 </div>
-<div>
-  <p></p>
-  <p></p>
-  <p></p>
+<div class=" flex flex-col bg-white text-[20px] font-extralight">
+  <p>With over 100 years of history, the University of Porto is a leading teaching and scientific research institution in Portugal and worldwide.</p>
+  <p class="mt-10">Considered the best Portuguese University and one of the best 100 European institutions according to the most important Higher Education rankings, U.Porto combines quality teaching and excellent research with the best academic experience.</p>
+  <p class="mt-10">We are waiting for you!</p>
+  <div class="mt-10">
+    <div>
+    <p>See more</p>
+    <i class="fa-solid fa-circle-chevron-right" style="color: #a18a4d;"></i>
+    </div>
+  </div>
+  </div>
 </div>
 
 </div>
+<div class="bg-gray-100 h-1 w-full"><hr></div>
 <!-- End of sixth section -->
-<div><h1 class="text-3xl text-yellow-800 pl-40 mt-20">Research</h1></div>
-<div class="flex px-40 mt-10">
+<div><h1 class="text-[60px] text-[#a18a4d] pl-40 mt-20">Research</h1></div>
+<div class="flex px-40 mt-10 gap-6">
   <div class="flex-1">
-    <h1 class="my-5">Research University</h1>
-    <p class="my-5">With 48 research units and a highly qualified scientific community, the University of Porto is one of the largest producers of science in Portugal, contributing to almost 25% of all national scientific output.</p>
-    <p class="my-5">The excellence of our scientific ecosystem is particularly evident in the leading position the University occupies in the main international rankings of Higher Education.</p>
+    <h1 class="my-5 font-bold text-[60px]">Research University</h1>
+    <p class="my-5  text-[20px] font-extralight">With 48 research units and a highly qualified scientific community, the University of Porto is one of the largest producers of science in Portugal, contributing to almost 25% of all national scientific output.</p>
+    <p class="my-5  text-[20px] font-extralight">The excellence of our scientific ecosystem is particularly evident in the leading position the University occupies in the main international rankings of Higher Education.</p>
   </div>
   <div class="flex-1 ">
  <img src="porto-images/investigar-home_destaque.format-jpeg.jpg">
   </div>
 </div>
-<div class="bg-yellow-800 opacity-75">
-  <div class=" mt-10 flex flex-col justify-center items-center gap-8 text-white text-3xl px-40">
+<div class="bg-[#a18a4d]">
+  <div class=" mt-10 flex flex-col justify-center items-center gap-8 text-white  px-40">
     <div class="flex justify-center items-center pt-20">
-      <div class="flex-grow">
+      <div class="relative">
         <i class="fa-thin fa-bullhorn fa-rotate-by fa-2xl" style="--fa-rotate-angle: 300deg;"></i>
   </div>
-    <div class="flex gap-2 justify-end">
+    <div class=" absolute right-10 flex gap-2 justify-end">
       <div>
     <p >Learn more</p>
   </div>
     <div>
-      <i class="fa-solid fa-square-caret-right fa-2xs" style="color: #ffffff;"></i>
+      <i class="fa-solid fa-circle-chevron-right" style="color: #ffffff;"></i>
     </div>
   </div>
 </div>
 <div class="flex flex-col items-center">
   <div>
-  <h1 class="mt-10">U.PORTO IN FIGURES</h1>
+  <h1 class="mt-10 text-[60px]">U.PORTO IN FIGURES</h1>
 </div>
 <div>
-  <h1 class="mt-10">2022/2023</h1>
+  <h1 class="mt-10 text-3xl">2022/2023</h1>
 </div>
 </div>
 <div class="bg-white w-full">
   <hr>
 </div>
-<div class="flex justify-center gap-40 mb-5">
+<div class="flex justify-center gap-40 mb-5 text-3xl">
   <p>+300<br>
     Courses</p>
   <p>+35.000<br>
@@ -208,7 +221,7 @@
   </div>
  
 </div>
-<div><h1 class="text-3xl text-yellow-800 mt-20 pl-40 mb-10">Frequently asked questions</h1></div>
+<div><h1 class="text-3xl text-[#a18a4d] mt-20 pl-40 mb-10">Frequently asked questions</h1></div>
 <div class="flex gap-5 px-40 mt-10 mb-10 text-2xl">
   <h1>International students</h1>
   <h1>Prospective students</h1>
@@ -219,29 +232,28 @@
 <div class="bg-gray-200 mx-40 h-0.5"><hr></div>
 <div class="flex mt-10 px-40">
   <div>
-    <h1 class="text-3xl text-yellow-800">International Students</h1>
-    <p class="mt-10 mx-4 text-2xl">Welcome! In this area you will find the answers you need to start and make the most of your experience at the University. We hope to help you... and welcome you soon!</p>
+    <h1 class="text-3xl text-[#a18a4d]">International Students</h1>
+    <p class="mt-10 text-2xl">Welcome! In this area you will find the answers you need to start and make the most of your experience at the University. We hope to help you... and welcome you soon!</p>
     <div class="flex gap-4">
-      <div>
-      <p>See more</p>
+      <div class="flex gap-3 mt-5">
+      <p class="text-[20px]">See more</p>
+     
+      <i class="fa-solid fa-circle-chevron-right m-auto" style="color: #a18a4d;"></i>
     </div>
-      <div class="bg-yellow-800 rounded-full py-3 px-3">
-        <i class="fa-solid fa-greater-than" style="color: #ffffff;"></i>
-      </div>
     </div>
     <div class="flex mt-10 gap-4">
-      <div class=" bg-gray-500 px-3 py-5"><i class="fa-solid fa-less-than" style="color: #ffffff;"></i></div>
-      <div class=" bg-yellow-800 px-3 py-5"><i class="fa-solid fa-greater-than" style="color: #ffffff;"></i></div>
+      <i class="fa-solid fa-square-caret-left text-[50px]" style="color: #c9cdd4;"></i>
+      <i class="fa-solid fa-square-caret-right text-[50px]" style="color: #a18a4d;"></i>
     </div>
   </div>
   <div>
     <img src="porto-images/gate-estudantes-internacionais.format-jpeg.jpg">
   </div>
 </div>
-<div class="bg-black opacity-70 text-white mt-20">
+<div class="bg-[#333] text-white mt-20" style="background-image: url(./porto-images/img_minerva_footer.png);">
   <div class="px-40">
 <div class="flex justify-center gap-40 mt-20 pt-20">
-<h1 class="text-yellow-800">Media</h1>
+<h1 class="text-[#a18a4d]">Media</h1>
 <div>
 <h1>U.Porto News</h1>
 <h1>Brochures and Presentations</h1>
@@ -253,7 +265,7 @@
 </div>
 <!-- first line -->
 <div class="flex justify-center gap-40 mt-20">
-  <h1 class="text-yellow-800">U.porto</h1>
+  <h1 class="text-[#a18a4d]">U.porto</h1>
 <div>
 <h1>U.Porto News</h1>
 <h1>Brochures and Presentations</h1>
