--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- first nav-bar -->
-  <div class="flex bg-gray-950 justify-between px-40">
+  <div class=" lg:flex-row bg-gray-950 justify-between px-40 hidden">
     <div class="flex gap-5">
       <div class="flex gap-4 justify-center align-center">
         <p class="text-white">About the university</p> <i class="fa-solid fa-caret-down" style="color: #5d6065;"></i>
@@ -38,10 +38,13 @@
   <!-- end of first nav-bar -->
   <!-- Second nav-bar begin -->
   <div class="flex flex-row bg-gray-200">
-    <div class=" flex flex-row px-40 gap-20 justify-between">
+    <div class=" flex flex-row lg:px-40 lg:gap-20 px-5 gap-5 lg:justify-between mt-10 justify-center">
+      <div class="flex-1">
+        <i class="fa-solid fa-bars" style="color: #000000;"></i>
+      </div>
     <div class="flex-1">
-      <img src="porto-images/logo.svg" class="h-32 w-96"></div>
-    <div class="flex-1 flex flex-row justify-end gap-8">
+      <img src="porto-images/logo.svg" class="lg:h-32 w-96 w-auto"></div>
+    <div class="flex-1 lg:flex flex-row justify-end gap-8 hidden">
     <div class="flex-1 flex gap-4 mt-10 text-[20px]">
       <h1 class="font-bold uppercase">Study</h1>
       <h1 class="font-bold uppercase">Research</h1>
@@ -187,8 +190,8 @@
 <div class="bg-[#a18a4d]">
   <div class=" mt-10 flex flex-col justify-center items-center gap-8 text-white  px-40">
     <div class="flex justify-center items-center pt-20">
-      <div class="relative">
-        <i class="fa-thin fa-bullhorn fa-rotate-by fa-2xl" style="--fa-rotate-angle: 300deg;"></i>
+      <div class="relative text-6xl">
+        <i class="fa-thin fa-bullhorn fa-rotate-by fa-2xl " style="--fa-rotate-angle: 300deg;"></i>
   </div>
     <div class=" absolute right-10 flex gap-2 justify-end">
       <div>
