--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 </div>
 <!-- End of the third section -->
 <h1 class="lg:pl-40 text-3xl mt-20 mb-5 pl-5">Which course are you looking for?</h1>
-<div class="flex gap-8">
+<div class="flex lg:flex-row flex-col gap-8">
 <div class=" flex-1 lg:pl-40 flex flex-col gap-4 px-5">
   <input type="text" placeholder=" All" class="bg-white border border-black lg:w-full w-[350px] h-16 text-[20px]"></input>
   <input type="text" placeholder=" Please enter course keywords..." class="bg-white border border-black lg:w-full w-[350px] h-16 text-[20px]"></input>
   <button class="bg-[#a18a4d] lg:px-64 lg:py-4 w-[350px]">Search</button>
 </div>
-<div class="flex-1 flex flex-col">
+<div class="flex-1 flex flex-col mx-5">
   <h1 class="text-3xl mb-5">Courses from A to Z:</h1>
   <a href="#" class="text-2xl underline font-extralight">Bachelor's and integrated master's Degree</a>
   <a href="#" class="text-2xl underline font-extralight">Master's degree</a>
@@ -103,21 +103,21 @@
 </div>
   <!-- End of fourth section -->
 <div class="bg-gray-100 mt-20">
-<div class="flex justify-between px-40 mt-20">
+<div class="flex lg:flex-row flex-col gap-2 lg:justify-between lg:px-40 mt-20 px-5">
   <div>
   <h1 class="text-[#a18a4d] text-[60px]">News</h1>
 </div>
 <div class="flex gap-4">
   <div>
-  <h1 class="text-[#a18a4d] text-2xl">All News</h1>
+  <h1 class="text-[#a18a4d] text-2xl ">All News</h1>
 </div>
 <div >
   <i class="fa-solid fa-circle-chevron-right" style="color: #a18a4d;"></i>
 </div>
 </div>
 </div>
-<div class="flex mt-10 gap-5 px-40">
-  <div class="flex-1 bg-white">
+<div class="flex lg:flex-row flex-col mt-10 gap-5 lg:px-40 px-5">
+  <div class="flex-1 bg-white lg:block hidden">
     <div class="mx-5">
       <h1 class="text-[#a18a4d] my-5">Desporota</h1>
       <p class="mb-20  text-[20px]">U.Porto vai organizar Europeu Universitário de Futebol em 2027</p>
@@ -138,9 +138,9 @@
       <img src="porto-images/ijup-2024_12.format-jpeg.jpg">
     </div>
   </div>
-  <div class="flex-1 bg-white">
+  <div class="flex-1 bg-white lg:block hidden">
     <div class="mx-5">
-      <h1 class="text-[#a18a4d] my-5">Cultura</h1>
+      <h1 class="text-[#a18a4d] my-5 ">Cultura</h1>
       <p class="mb-20 text-[20px]">MHNC-UP abre "fora de horas" para celebrar os Museus e a Ciência
       </p>
       <p class="mb-5">14 May 2023</p>
@@ -150,7 +150,7 @@
     </div>
   </div>
 </div>
-<div class="flex mt-10 pl-40 gap-4">
+<div class="flex mt-10 lg:pl-40 gap-4 pl-5">
   <i class="fa-solid fa-square-caret-left text-[50px]" style="color: #c9cdd4;"></i>
   <i class="fa-solid fa-square-caret-right text-[50px]" style="color: #a18a4d;"></i>
 </div>
